--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -73,11 +73,14 @@ body.light {
     --ion-background-color: var(--ion-color-white);
     --ion-background-color-rgb: var(--ion-color-white-rgb);
 
+    --ion-text-color: #000000;
+    --ion-text-color-rgb: 0, 0, 0;
+
     --ion-toolbar-background: var(--ion-color-primary);
     --ion-toolbar-color: var(--ion-color-white);
 
     --ion-card-background: var(--ion-color-lightest);
-    --ion-card-color: var(--ion-color-dark);
+    --ion-card-color: var(--ion-text-color);
 
     --ion-item-background: var(--ion-color-white);
 }
@@ -140,4 +143,5 @@ body.dark {
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: var(--ion-color-lightest);
+    --ion-card-color: var(--ion-text-color);
 }
